Test fix by Severin. Thanks!